--- a/src/components/Cards/PrimaryCard.css
+++ b/src/components/Cards/PrimaryCard.css
@@ -17,3 +17,8 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+
+.PrimaryCard > .imageContainer{
+    width: 300px;
+    height: 200px;
+}
