--- a/src/components/PopularSection/PopularSection.css
+++ b/src/components/PopularSection/PopularSection.css
@@ -9,11 +9,14 @@
 .slick-arrow{
     opacity: 1 !important;
     background-color: #cac8c8 !important;
+    box-shadow: 2px 2px 10px black;
     width: 40px !important;
     height: 40px !important;
     display: flex !important;
     align-items: center !important;
     justify-content: center !important;
+    position: relative;
+    top: 180px !important;
 }
 .slick-arrow::after{
     color: #000;
