--- a/src/components/PopularSection/PopularSection.css
+++ b/src/components/PopularSection/PopularSection.css
@@ -1,12 +1,12 @@
-.slick-track{
+.PopularSection .slick-track{
     justify-content: center !important;
     padding-bottom: 50px;
 }
-.slick-dots{
+.PopularSection .slick-dots{
     color: red;
 }
 
-.slick-arrow{
+.PopularSection .slick-arrow{
     opacity: 1 !important;
     background-color: #cac8c8 !important;
     box-shadow: 2px 2px 10px black;
@@ -15,10 +15,10 @@
     display: flex !important;
     align-items: center !important;
     justify-content: center !important;
-    position: relative;
+    position: absolute;
     top: 180px !important;
 }
-.slick-arrow::after{
+.PopularSection .slick-arrow::after{
     color: #000;
     width: 15px !important;
     height: 15px !important;
@@ -26,12 +26,12 @@
     border-top-width: 4px !important;
     inset: unset !important;
 }
-.slick-next{
+.PopularSection .slick-next{
     right: 10px !important;
 }
-.slick-prev{
+.PopularSection .slick-prev{
     left: 3px !important;
 }
-.slick-dots button{
+.PopularSection .slick-dots button{
     background-color: black !important;
 }
