--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,16 @@
 @tailwind utilities;
 
 
+
+@font-face {
+    font-family: 'poppins-regular' ;
+    src: url('/fonts/poppins/Poppins-Regular.ttf');
+}
+@font-face {
+    font-family: 'poppins-light' ;
+    src: url('/fonts/poppins/Poppins-Light.ttf');
+}
+
 :root{
     --primaryColor: #F81539;
     --secondaryColor: #FC4308;
@@ -50,6 +60,7 @@ body{
 .skeletonContainer .skeleton{
     width: 100%;
     height: 100%;
+    font-family: 'Courier New', Courier, monospace
 }
 
 
