--- a/src/index.css
+++ b/src/index.css
@@ -16,15 +16,36 @@
 
 :root {
     --primaryColor: #F81539;
+    --primaryDarkColor: #bd0120;
     --secondaryColor: #FC4308;
     --bgPrimary: #F5F5F5;
+    --bgSecondary: #e6e6e6;
+    --primaryDarkBg: #101828;
+    --secondaryDarkBg: #1b1b1b;
+    --cardDarkBg: #1e2939;
+
+    
 }
+/* .tox-editor-container, .toptobottom{
+    background-color: red !important
+
+}
+.tox-edit-area__iframe,  .tox-editor-header, .tox-toolbar__primary, .tox-tbtn, .tox-icon svg{
+    
+    background-color: var(--cardDarkBg) !important;
+    color: white !important;
+    fill: white !important;
+}
+.tox-statusbar{
+    background-color: brown !important;
+} */
 
 .H1 {
     font-weight: 500;
     font-size: 36px;
     line-height: 52px;
 }
+
 
 .H4 {
     font-weight: 500;
@@ -49,6 +70,10 @@
 .P3 {
     font-size: 12px;
     color: #3E3232;
+}
+
+.dark .P2, .dark .P3{
+    color: #9CA3AF;
 }
 
 .black50 {
