--- a/src/components/Cards/PrimaryCard.css
+++ b/src/components/Cards/PrimaryCard.css
@@ -1,6 +1,6 @@
 .PrimaryCard {
     /* width: 300px; */
-    /* height: 390px; */
+    min-height: 420px !important;
     padding: 10px;
     border-radius: 12px;
     box-shadow: 0 0 32px #00000016;
